ajout des pages

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <a  class="nav-link" href="">00 Home</a>
             </li>
             <li class="nav-item">
-                <a  class="nav-link" href="">01 Destination</a>
+                <a  class="nav-link" href="destination-moon.html">01 Destination</a>
             </li>
             <li class="nav-item ">
-                <a  class="nav-link" href="#">02 Crew</a>
+                <a  class="nav-link" href="crew-commander.html">02 Crew</a>
             </li>
             <li class="nav-item ">
-                <a  class="nav-link" href="#">03 Technology</a>
+                <a  class="nav-link" href="technology-vehicle.html">03 Technology</a>
             </li>
          </ul>
       </div>
