finition home page

--- a/destination-moon.html
+++ b/destination-moon.html
@@ -64,23 +64,45 @@
 
 
 
-  <H5> <span class="numbers"> 01</span>  Pick your destination </H5> 
+  <H5 class="h5_destinationmoon"> <span class="number"> 01</span>  Pick your destination </H5> 
 
-  Moon
+  <div>
+    <img src="assets/destination/image-moon.png" alt=" moon" class="img-moon">
+  </div>
+ 
+
+  
+
+  <section class="moon_features">
+    <div class="nav_planet">
+      Moon
   Mars
   Europa
-  Titan
+  Titan 
+    </div>
 
-  Moon
+  <h2>Moon </h2> 
 
-  See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
+    <div>
+      See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
   regain perspective and come back refreshed. While you’re there, take in some history 
   by visiting the Luna 2 and Apollo 11 landing sites.
+    </div>
 
-  Avg. distance
+    <div>
+ Avg. distance
   384,400 km
+    </div>
+
+    <div>
 
   Est. travel time
   3 days
+    </div>
+  </section>
+
+
+ 
+
 </body>
 </html>
