--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container-fluid spacenavbar">
       
       <div>
-        <img src="/space-tourism-website-main/starter-code/assets/shared/logo.svg" alt="">
+        <img src="assets/shared/logo.svg" alt="">
       </div>
       
          <div>
