--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
          <ul class="navbar-nav">
           
             <li class="nav-item active">
-                <a  class="nav-link" href="">00 Home</a>
+                <a  class="nav-link" href=""> <span class="number">00</span> Home</a>
             </li>
             <li class="nav-item">
-                <a  class="nav-link" href="destination-moon.html">01 Destination</a>
+                <a  class="nav-link" href="destination-moon.html"> <span class="number">01</span> Destination</a>
             </li>
             <li class="nav-item ">
-                <a  class="nav-link" href="crew-commander.html">02 Crew</a>
+                <a  class="nav-link" href="crew-commander.html"> <span class="number">02</span> Crew</a>
             </li>
             <li class="nav-item ">
-                <a  class="nav-link" href="technology-vehicle.html">03 Technology</a>
+                <a  class="nav-link" href="technology-vehicle.html"> <span class="number">03</span> Technology</a>
             </li>
          </ul>
       </div>
@@ -63,10 +63,10 @@
 
   <section class="homepage">
 
-  <h5>So, you want to travel to </h5> 
+  <h5 class="color">So, you want to travel to </h5> 
   <h1>Space </h1> 
 
-  <div>
+  <div class="text">
    Let’s face it; if you want to go to space, you might as well genuinely go to 
   outer space and not hover kind of on the edge of it. Well sit back, and relax 
   because we’ll give you a truly out of this world experience!
