mise en page techology

--- a/crew-specialist.html
+++ b/crew-specialist.html
@@ -81,6 +81,23 @@
   </div>
 </div>
 
+<div>
+  <div>
+    <div>  </div>
+ </div>
+  <div>
+    <div>  </div>
+ </div>
+  <div>
+    <div>  </div>
+ </div>
+  <div>
+    <div> 10px par 10px border raduis 50% </div>
+ </div>
+  <div>
+  
+</div>
+
 <ul class="list-crew">
   <li> <a href="crew-commander.html"> 1 </a> </li>
   <li> <a href="crew-specialist.html"> 2 </a> </li>
