ajout class container

--- a/technology-spaceport.html
+++ b/technology-spaceport.html
@@ -69,7 +69,7 @@
   <img src="assets/technology/image-spaceport-portrait.jpg" alt=" vehicle" class="img-tech">
 </div>
 
-<div>
+<div class="container-tech">
   <h5 class="color"> The terminology...</h5>
   <div class="title-tech"> Spaceport</div> 
 
