ajout des pages tech

--- a/technology-capsule.html
+++ b/technology-capsule.html
@@ -93,7 +93,7 @@
   </div>
 
   <div >
-    <a href="technology-capsule.html"  class="capsule"> 3</a>
+    <a href="technology-capsule.html"  class="capsule capsule-round"> 3</a>
   </div>
 </div>
 
