--- a/technology-vehicle.html
+++ b/technology-vehicle.html
@@ -85,7 +85,7 @@
 
 <div>
   <div >
-      <a href="technology-vehicle.html" class="vehicle"> 1</a>
+      <a href="technology-vehicle.html" class="vehicle vehicle-round"> 1</a>
   </div>
 
   <div >
