--- a/technology-spaceport.html
+++ b/technology-spaceport.html
@@ -89,7 +89,7 @@
   </div>
 
   <div >
-     <a href="technology-spaceport.html" class="spaceport"> 2</a>
+     <a href="technology-spaceport.html" class="spaceport spaceport-round"> 2</a>
   </div>
 
   <div >
