essai dots crew page

--- a/crew-commander.html
+++ b/crew-commander.html
@@ -77,6 +77,15 @@
     <img src="assets/crew/image-douglas-hurley.png" alt="Douglas Hurley" class="img-crew">
   </div>
   
+
+  <div class="list-crew">
+    <span class="dots"> </span>
+    <span class="dots"> </span>
+    <span class="dots"> </span>
+    <span class="dots"> </span>
+  
+</div>
+
   <ul class="list-crew">
     <li> <a href="crew-commander.html"> 1 </a> </li>
     <li> <a href="crew-specialist.html"> 2 </a> </li>
