--- a/crew-engineer.html
+++ b/crew-engineer.html
@@ -75,6 +75,14 @@
 
 </div>
 
+<div class="list-crew">
+  <span class="dots"> </span>
+  <span class="dots"> </span>
+  <span class="dots"> </span>
+  <span class="dots"> </span>
+
+</div>
+
  <ul class="list-crew">
   <li> <a href="crew-commander.html"> 1 </a> </li>
   <li> <a href="crew-specialist.html"> 2 </a> </li>
