--- a/crew-pilot.html
+++ b/crew-pilot.html
@@ -77,13 +77,13 @@
   </div>
 </div>
 
-<ul class="list-crew">
-  <li> <a href="crew-commander.html"> 1 </a> </li>
-  <li> <a href="crew-specialist.html"> 2 </a> </li>
-  <li> <a href="crew-pilot.html"> 3</a> </li>
-  <li> <a href="crew-engineer.html">4 </a> </li>
-  
- </ul>
+<div class="list-crew">
+  <span class="dots"> </span>
+  <span class="dots"> </span>
+  <span class="dots"> </span>
+  <span class="dots"> </span>
+
+</div>
   
 
  
